solo/geoshape-firewall-rules.conf
*filter
# By default, disallow incoming requests, but allow outgoing
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]

# Allow incoming requests from myself
-A INPUT -i lo -j ACCEPT

# Allow requests to connections that have already been established
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT

# Allow incoming traffic to this server's http port.
-A INPUT -p tcp --dport 80 -j ACCEPT

# Allow responses for outgoing http requests.
-A INPUT -p tcp --sport 80 -m state --state ESTABLISHED -j ACCEPT

# Allow incoming traffic to the alternate http port.
-A INPUT -p tcp --dport 8080 -j ACCEPT

# Allow responses for outgoing http requests.
-A INPUT -p tcp --sport 8080 -m state --state ESTABLISHED -j ACCEPT

# Allow incoming traffic to the secure http port.
-A INPUT -p tcp --dport 443 -j ACCEPT

# Allow responses for outgoing https requests.
-A INPUT -p tcp --sport 443 -m state --state ESTABLISHED -j ACCEPT

# Allow incoming ssh requests.
-A INPUT -p tcp --dport 22 -j ACCEPT
# NOTE: It's a good idea to limit who can ssh into this machine.  You can do this
# by removing the above line and specifying ip addresses individually.
# 
# For Example:
#   -A INPUT -p tcp -s 192.168.10.115 --dport 22 -j ACCEPT
#
# This would only allow the machine at 192.168.10.115 to ssh into this machine.

# Allow responses from outgoing ssh requests.
-A INPUT -p tcp --sport 22 -m state --state ESTABLISHED -j ACCEPT

# Allow incoming requests to postgres.
-A INPUT -p tcp --dport 5432 -j ACCEPT

# Allow responses from outgoing requests to postgres.
-A INPUT -p tcp --sport 5432 -m state --state ESTABLISHED -j ACCEPT


COMMIT
